[gd_scene load_steps=3 format=3 uid="uid://robtvwd0f6yb"]

[ext_resource type="Script" uid="uid://co5njr8tnyy2q" path="res://DeckEditor/DeckEditor.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bxhsl0467il20" path="res://classcad.png" id="2_kgr0d"]

[node name="DeckEditor" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 11.0
offset_right = 117.0
offset_bottom = 34.0
scale = Vector2(1.40823, 1.40823)
text = "deck editoro"

[node name="DeckInfoLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 14.0
offset_right = 431.0
offset_bottom = 37.0
scale = Vector2(1.40823, 1.40823)
text = "Deckname"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 65.0
offset_right = 100.0
offset_bottom = 119.0
scale = Vector2(15.332, 8.09202)

[node name="CardGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 73.0
offset_right = 771.0
offset_bottom = 113.0
scale = Vector2(9.00051, 13.8043)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 542.0
offset_right = 440.0
offset_bottom = 582.0
scale = Vector2(1.99134, 1.99134)

[node name="save" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save Deck"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 832.0
offset_right = 988.0
offset_bottom = 40.0
scale = Vector2(1.41986, 1.41986)

[node name="Filter by Type" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Filter by Type"

[node name="Sort" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Sort"

[node name="CardPoolScroll" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 731.0
offset_top = 73.0
offset_right = 771.0
offset_bottom = 73.0
scale = Vector2(6.94541, 6.94541)

[node name="CardPool" type="VBoxContainer" parent="CardPoolScroll"]
layout_mode = 2

[node name="Classcad" type="Sprite2D" parent="CardPoolScroll"]
position = Vector2(3.31155, 34.6992)
scale = Vector2(0.0558234, 0.0558234)
texture = ExtResource("2_kgr0d")
